[gd_scene load_steps=4 format=2]

[ext_resource path="res://weapons/FireParticles.tscn" type="PackedScene" id=1]
[ext_resource path="res://weapons/Bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://weapons/FirePosition.gd" type="Script" id=3]

[node name="FirePosition" type="Position3D"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0.683332, -1.45221 )
script = ExtResource( 3 )
Bullet = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="Muzzle" parent="." instance=ExtResource( 1 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -1.13316e-07, 0, -0.40228 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
